# computer-rl-openenv

./: .gitignore  Dockerfile.test  LICENSE  README.md  main.py  pyproject.toml
environments/computer_rl_env/: README.md  __init__.py  client.py  managed_client.py  models.py  openenv.yaml  pyproject.toml
environments/computer_rl_env/baselines/: random_agent.py  rule_based_agent.py
environments/computer_rl_env/evaluation/: evaluate.py  metrics.py
environments/computer_rl_env/server/: Dockerfile  __init__.py  app.py  environment.py  rewards.py  start.sh  supervisord.conf
environments/computer_rl_env/server/controllers/: __init__.py  accessibility.py  keyboard.py  mouse.py  recording.py  screenshot.py  utils.py
environments/computer_rl_env/server/evaluators/: base.py
environments/computer_rl_env/server/evaluators/getters/: __init__.py  calc.py  chrome.py  file.py  general.py  gimp.py  impress.py  info.py  misc.py  replay.py  vlc.py  vscode.py
environments/computer_rl_env/server/evaluators/metrics/: __init__.py  app_launched.py  basic_os.py  chrome.py  docs.py  file_exists.py  general.py  gimp.py  libreoffice.py  others.py  pdf.py  process_running.py  slides.py  table.py  text_present.py  thunderbird.py  url_match.py  utils.py  vlc.py  vscode.py
environments/computer_rl_env/server/vm_provider/: base.py  docker_provider.py
environments/computer_rl_env/tasks/: __init__.py  base.py  loader.py
scripts/: download_dataset.py
stubs/pyatspi/: Accessibility.pyi  __init__.pyi  action.pyi  appevent.pyi  application.pyi  atspienum.pyi  collection.pyi  component.pyi  constants.pyi  deviceevent.pyi  document.pyi  editabletext.pyi  hypertext.pyi  image.pyi  interface.pyi  registry.pyi  role.pyi  selection.pyi  state.pyi  table.pyi  tablecell.pyi  text.pyi  utils.pyi  value.pyi
tests/: test_metrics.py  test_task_manager.py
training/: __init__.py  config.py  format_prompt.py  parse_action.py  pyproject.toml  rewards.py  rollout.py  trainer.py
training/configs/: grpo_qwen2b_vision_small.yaml
