[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "computer-use-agent"
version = "0.1.0"
requires-python = ">=3.13"
description = "Computer use RL agent for desktop GUI automation"

[tool.uv.workspace]
members = [
    "environments/computer_rl_env",
]

[tool.uv.sources]
openenv-core = { git = "https://github.com/meta-pytorch/OpenEnv.git", rev = "main" }

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.11",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.hatch.build.targets.wheel]
packages = ["environments/computer_rl_env"]
