[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "computer-use-agent"
version = "0.1.0"
requires-python = ">=3.13"
description = "Computer use RL agent for desktop GUI automation"
dependencies = [
    "pyautogui>=0.9.54",
    "computer-rl-env",
    "vllm",
    "torch",
    "torchvision",
    "torchaudio",
]

[tool.uv.workspace]
members = ["environments/computer_rl_env", "training"]

[tool.uv]
environments = ["sys_platform == 'linux'"]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[[tool.uv.index]]
name = "vllm-nightly-cu130"
url = "https://wheels.vllm.ai/nightly/cu130"
explicit = true

[tool.uv.sources]
openenv-core = { git = "https://github.com/meta-pytorch/OpenEnv.git", rev = "main" }
computer-rl-env = { workspace = true }
torch = { index = "pytorch-cu130" }
torchvision = { index = "pytorch-cu130" }
torchaudio = { index = "pytorch-cu130" }
vllm = { index = "vllm-nightly-cu130" }

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.14.11",
    "ty>=0.0.11",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.ty.environment]
extra-paths = ["./stubs"]
python-version = "3.13"

[tool.ty.rules]
possibly-unresolved-reference = "warn"

[tool.ty.src]
include = ["environments/**", "training/**"]
exclude = ["stubs/**", ".venv/**", "**/.git/**", "**/__pycache__/**"]

[tool.hatch.build.targets.wheel]
packages = ["environments/computer_rl_env"]

[tool.pytest.ini_options]
testpaths = ["tests/"]
pythonpath = ["environments/computer_rl_env"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "e2e: marks tests as end-to-end tests",
]
addopts = ["-v", "--tb=short", "--strict-markers"]
