[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "computer-use-agent"
version = "0.1.0"
requires-python = ">=3.13"
description = "Computer use RL agent for desktop GUI automation"
dependencies = ["computer-rl-env"]

[tool.uv.workspace]
members = ["environments/computer_rl_env", "training"]

[tool.uv]
environments = ["sys_platform == 'linux'"]


[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.14.11",
    "ty>=0.0.11",
]
[tool.uv.sources]
computer-rl-env = { workspace = true }
[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.ty.environment]
extra-paths = ["./stubs"]
python-version = "3.13"

[tool.ty.rules]
possibly-unresolved-reference = "warn"

[tool.ty.src]
include = ["environments/**", "training/**"]
exclude = ["stubs/**", ".venv/**", "**/.git/**", "**/__pycache__/**"]

[tool.hatch.build.targets.wheel]
packages = ["environments/computer_rl_env"]

[tool.pytest.ini_options]
testpaths = ["tests/"]
pythonpath = [".", "environments/computer_rl_env"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "e2e: marks tests as end-to-end tests",
]
addopts = ["-v", "--tb=short", "--strict-markers"]
