[project]
name = "computer-rl-training"
version = "0.1.0"
description = "GRPO training infrastructure for Computer RL Environment"
requires-python = ">=3.13"
dependencies = [
    "computer-rl-env",
    "datasets>=4.5.0",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
    "torch>=2.9.0",
    "torchaudio",
    "torchvision",
    "trackio>=0.15.0",
    "transformers>=4.57.6",
    "trl>=0.27.1",
    "vllm==0.15.0rc2.dev81+g40c35038d.cu130",
]

[project.optional-dependencies]
dev = ["pytest>=9.0.0", "pytest-asyncio>=1.3.0"]

[project.scripts]
train = "training.trainer:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["training"]

# Index configuration is inherited from workspace root pyproject.toml
[tool.uv.sources]
torch = { index = "pytorch-cu130" }
vllm = { index = "vllm-nightly-cu130" }
computer-rl-env = { workspace = true }
torchvision = { index = "pytorch-cu130" }
torchaudio = { index = "pytorch-cu130" }
