[project]
name = "computer-rl-training"
version = "0.1.0"
description = "GRPO training infrastructure for Computer RL Environment"
requires-python = ">=3.13"
dependencies = [
    "computer-rl-env",
    "datasets>=4.5.0",
    "openai>=2.15.0",
    "peft>=0.18.1",
    "pillow>=11.3.0",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
    "torch>=2.9.0",
    "torchaudio",
    "torchvision",
    "trackio>=0.15.0",
    "transformers>=4.57.6",
    "trl[vllm]>=0.27.1",
    "vllm==0.12.0",
]

[project.optional-dependencies]
dev = ["pytest>=9.0.0", "pytest-asyncio>=1.3.0"]

[project.scripts]
train = "training.trainer:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["training"]

[tool.uv.sources]
computer-rl-env = { workspace = true }
