[project]
name = "computer-rl-env"
version = "0.1.0"
description = "Computer control RL environment for OpenEnv"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docker>=7.1.0",
    "fastapi>=0.128.0",
    "mss>=10.1.0",
    "numpy>=1.24,<2.3",                  # constrained by vllm's numba dependency
    "openenv-core",
    "pillow<=12",
    "pyautogui>=0.9.54",
    "pydantic>=2.12.5",
    "pynput>=1.8.1",
    "pycairo>=1.27.0",
    "pyyaml>=6.0.3",
    "pygobject>=3.50,<3.52",
    "python-xlib>=0.33",
    "requests>=2.32.5",
    "uvicorn>=0.40.0",
    "rapidfuzz>=3.14.3",
    "playwright>=1.58.0",
    "lxml>=6.0.2",
    "openpyxl>=3.1.5",
    "formulas>=1.3.3",
    "tldextract>=5.3.1",
    "xmltodict>=1.0.2",
    "pymupdf>=1.26.7",
    "beautifulsoup4>=4.14.3",
    "cssselect>=1.4.0",
    "pandas>=2.3.3",
    "python-docx>=1.2.0",
    "python-pptx>=1.0.2",
    "odfpy>=1.4.1",
    "pypdf>=6.6.2",
    "librosa>=0.11.0",
    "fastdtw>=0.3.4",
    "imagehash>=4.3.2",
    "opencv-python-headless>=4.13.0.90",
    "mutagen>=1.47.0",
    "pydrive2>=1.21.3",
    "pyacoustid>=1.3.0",
    "pdfplumber>=0.11.9",
    "scikit-image>=0.26.0",
    "scipy>=1.17.0",
    "python-levenshtein>=0.27.3",
    "pytesseract>=0.3.13",
    "pywavelets>=1.9.0",
    "easyocr>=1.7.2",
    "pypdf2>=3.0.1",
]


[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
server = "computer_rl_env.server.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["computer_rl_env"]

[tool.hatch.build.targets.wheel]
packages = ["computer_rl_env"]

[tool.hatch.build.targets.sdist]
include = ["/computer_rl_env", "/server"]

[tool.uv.sources]
openenv-core = { git = "https://github.com/meta-pytorch/OpenEnv", rev = "7ff934ccc9d00193bd84207c29597237b94ddb76" }
